Site redesign: Initial add of avatar and description to homepage.

--- a/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
@@ -20,4 +20,9 @@
  // Grey pallette
  $nobel:	#999999;
 
- 
+ // Examined Living - http://www.colourlovers.com/palette/3175417/Examined_Living
+ $yeah-right:	#A0F601;
+ $cloudy-blue:	#ECF0F1;
+ $steel-real:	#768A92;
+ $have-a-go:	#687E87;
+ $examined:		#5E7078;
