--- a/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
@@ -16,10 +16,20 @@
         <span class="pageTitle-text">Hi I'm Colin</span>
     </h1>
 </div>
+<div class="cloudyBlue">
+    <div class="layoutContainer layoutContainer--visible profile">
+        @*<img class="profile-image" alt="Colin Bacon - Web Developer" src="/Content/images/colin-bacon.jpg?1" />*@
+        <p class="profile-desc">
+            I am a web developer, currently working in a C# ASP.NET environment.  This is my <a class="link" href="/blog">blog.</a>
+            I write about things that interest me.  I'm friendly so get in <a class="link" href="mailto:colin@iambacon.co.uk">touch</a>.
+        </p>
+    </div>
+</div>
 <div class="layoutContainer">
     <p class="intro-desc">
         <span class="intro-block">I am a web developer.</span> <span class="intro-block">I am a ski instructor.</span> <span class="intro-block">I am not related to Kevin Bacon.</span>
         <span class="intro-block">This is my <a class="intro-link" title="Blog for Colin Bacon" href="/blog">blog.</a></span>
     </p>
 </div>
+
 
