--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_colours.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_colours.scss
@@ -1,13 +1,14 @@
 ﻿//
 // Helper classes for colours.
 // --------------------------------------------------
+/// <reference path="../base/_colours.scss" />
 
 .takeYourDesire {
 	background-color: $take-your-desire;
 }
 
 .illStayHere {
-	background-color: $ill-stay-here;	
+	background-color: $ill-stay-here;
 }
 
 .marshmallow {
@@ -20,4 +21,8 @@
 
 .fern {
 	background-color: $fern;
+}
+
+.cloudyBlue {
+	background-color: $cloudy-blue;
 }
