Blog section: Added server side code and unit tests.

--- a/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
@@ -1,4 +1,4 @@
-﻿@model IAmBacon.ViewModels.HomeViewModel
+﻿@model IAmBacon.ViewModels.Home.HomeViewModel
 @section css
 {
     @Styles.Render("~/bundles/homeCss")
