Add blog section to homepage: Intial commit, added server side functionally and intial styling of section.

--- a/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_colours.scss
@@ -18,7 +18,9 @@
  $white-smoke:	#EEEEEE;
 
  // Grey pallette
- $nobel:	#999999;
+ $nobel:			#999999;
+ $alto:				#DFDFDF;
+ $very-light-grey:	#CCCCCC;
 
  // Examined Living - http://www.colourlovers.com/palette/3175417/Examined_Living
  $yeah-right:	#A0F601;
