--- a/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
@@ -41,13 +41,25 @@ ul,
 ol,
 h2,
 h3,
-p {
+p,
+dl,
+dd {
 	margin: 0;
 }
 
 a {
 	text-decoration: none;
 	color: inherit;
+}
+
+// Set images to be responsive by default
+img {
+	max-width: 100%;
+	vertical-align: middle; // Setting `vertical-align` removes the whitespace that appears under `img` elements
+}
+
+h3 {
+	font-size: inherit;
 }
 
 html {
