--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
@@ -2,6 +2,8 @@
 // Grid mixins
 // Grid layout mixins to produce a semantic responsive layout.
 // --------------------------------------------------
+/// <reference path="_base.scss" />
+
 $column-width: 65px !default;
 $gutter-width: 20px !default;
 $total-columns: 12;
@@ -21,6 +23,13 @@ $total-columns: 12;
 
 	@if $span == 4 { 
 		&:first-child {		
+			margin-left: 0;
+		}
+	}
+
+	@if $span == 3 {
+		&:nth-of-type(4n+1) {
+			clear: left;
 			margin-left: 0;
 		}
 	}
