--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
@@ -600,7 +600,7 @@ blockquote {
 
 /* line 5, ../../../sass/utilities/_social.scss */
 .social {
-  background-image: url('../../../images/social.png?1405587515');
+  background-image: url('../../../images/social.png');
   background-repeat: no-repeat;
   height: 32px;
   width: 32px;
@@ -1015,14 +1015,26 @@ blockquote {
   float: left;
   padding-left: 5px;
 }
+@media only screen and (max-width: 767px) {
+  /* line 273, ../../../sass/pages/home/home.scss */
+  .articleThumb-date {
+    position: absolute !important;
+    overflow: hidden !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+  }
+}
 
-/* line 278, ../../../sass/pages/home/home.scss */
+/* line 282, ../../../sass/pages/home/home.scss */
 .articleThumb-category {
   float: right;
   padding-right: 5px;
 }
 
-/* line 283, ../../../sass/pages/home/home.scss */
+/* line 287, ../../../sass/pages/home/home.scss */
 .articleThumb-image {
   border-radius: 3px;
 }
