--- a/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
@@ -11,7 +11,9 @@
             <dd class="articleThumb-category">@Html.RouteLink(Model.Category, "Category", new { name = Model.Category.ToSeoUrl() })</dd>
         </dl>
     </header>
-    <img class="articleThumb-image dt-top" src="@Model.Thumbnail" alt="@Model.Title" />
+    <a href="@Url.RouteUrl("BlogPost", new { title = Model.SeoTitle })">
+        <img class="articleThumb-image dt-top" src="@Model.Thumbnail" alt="@Model.Title" />    
+    </a>
     <footer class="visuallyHidden">
         <dl>
             <dt>Author:</dt>
